[package]
name = "ream-validate-napi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI bindings for ream-validate"

[lib]
crate-type = ["cdylib"]

[dependencies]
ream-validate = { path = "../ream-validate" }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"
